--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 
-    <h2 align="center"> Audio samples for "Bone-Conducted Speech to Air-Conducted Speech Conversion Based on Cycle-Consistent Adversarial Networks"</h2>
+    <h2 align="center"> Audio samples for "Attention-Guided Generative Adversarial Networks for Whisper-to-Normal Speech Conversion Using Mel-Spectrogram"</h2>
     <!-- <div><b>Authors:</b> WeiWei Yu, Jian Zhou, HuaBin Wang, Liang Tao, Hon Keung Kwan</div> -->
     <div><b>Abstract:</b> 耳语音是一种特殊的发声方式，人类在发耳语音时没有声带的振动。相较于正常音，耳语音缺乏基频信息。耳语音的能量比正常音大约低20dB，将耳语音转换成正常音可以提高语音质量及可懂度。在传统的方法中人们通过显式地建模预测正常音的基频来实现耳语音向正常音转换。在本文中，我们提出了一种基于注意力指引的生成对抗网络模型，将耳语音的梅尔频谱参数转换生成为正常音的梅尔频谱参数，然后通过Griffin-Lim算法将正常音的梅尔频谱合成为时域波形，从而隐式地实现了耳语音所缺失基频成分的生成。我们提出的方法在模型训练时是基于帧级别的，在训练前无需对语音参数做时间对齐处理，这使得我们的耳语音转换系统在现实场景中更具适用性。实验结果表明提出的注意力指引生成对抗网络耳语音到正常音转换模型比传统的基于DTW的模型转换效果更佳。</div>
 
