--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Attention-Guided Generative Adversarial Networks for Whisper-to-Normal Speech Conversion Using Mel-Spectrogram</title>
+    <title>Demo for "Attention-Guided Generative Adversarial Network for Whisper to Normal Speech Conversion (AGAN-W2SC) using Mel-Spectrogram"</title>
 </head>
 
 <body>
 
 
     <h2 align="center"> Audio samples for "Attention-Guided Generative Adversarial Networks for Whisper-to-Normal Speech Conversion Using Mel-Spectrogram"</h2>
-    <!-- <div><b>Authors:</b> Teng Gao, Qing Pan, Jian Zhou, Huabin Wang, Liang Tao</div> -->
-    <div><b>Abstract:</b> Whispered speech is a special way of pronunciation, there is no vocal cord vibration when whispering. Therefore, the whispered speech lacks the fundamental frequency, and its energy is about 20dB lower than that of the normal speech. Converting the whispered speech into normal speech can improve the speech quality and intelligibility. This paper proposes a generative adversarial network model based on self-attention, with which the mel-spectrogram of the converted normal speech is estimated at the frame level from mel-spectrogram of the whispered speech, and the Griffin-Lim algorithm is then adopted to synthesize the converted normal speech mel-spectrogram into a time-domain waveform. The proposed method avoids the difficulty of estimating the fundamental frequency of the normal speech from the whispered speech. This method is more suitable for real application scenarios because it is not necessary to align the speech parameters for training. The experimental results show that the proposed whisper-to-normal speech conversion method can obtain higher speech quality and speech intelligibility than the traditional DTW-based method.</div>
+    <!-- <div><b>Authors:</b> Teng Gao, Qing Pan, Jian Zhou, Huabin Wang, Liang Tao, and Hon Keung Kwan</div> -->
+    <div><b>Summary:</b> Whispered speech is a special way of pronunciation, there is no vocal cord vibration when whispering. Therefore, a whispered speech does not contain a fundamental frequency, and its energy is about 20dB lower than that of its normal speech. Converting a whispered speech into a normal speech can improve speech quality and intelligibility. This demo shows the use of our attention-guided generative adversarial network for whisper to normal speech conversion, with which the mel-spectrogram of a converted normal speech is estimated at the frame level from the mel-spectrogram of its whispered speech, and the Griffin-Lim algorithm is then adopted to synthesize the converted normal speech mel-spectrogram into a time-domain waveform. The proposed AGAN-W2SC method avoids the difficulty of estimating the fundamental frequency of a normal speech from a whispered speech. This method can be adapted for practical applications because it does not require to align the associated speech parameters for training. Simulation results show that our GAN-W2SC method can obtain improved speech quality and speech intelligibility compared with those obtained by traditional methods based on dynamic time warping.</div>
 
 
     <h4>Comparing of different models(Whisper, Normal, GMM, BLSTM, CycleGAN, Ours ): </h4>
