--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Demo for "Attention-Guided Generative Adversarial Network for Whisper to Normal Speech Conversion (AGAN-W2SC) using Mel-Spectrogram"</title>
+    <title>Demo for "Attention-Guided Generative Adversarial Network for Whisper to Normal Speech Conversion"</title>
 </head>
 
 <body>
 
 
-    <h2 align="center"> Demo for "Attention-Guided Generative Adversarial Network for Whisper to Normal Speech Conversion (AGAN-W2SC) using Mel-Spectrogram"</h2>
+    <h2 align="center"> Demo for "Attention-Guided Generative Adversarial Network for Whisper to Normal Speech Conversion"</h2>
     <!-- <div><b>Authors:</b> Teng Gao, Qing Pan, Jian Zhou, Huabin Wang, Liang Tao, and Hon Keung Kwan</div> -->
-    <div><b>Summary:</b> Whispered speech is a special way of pronunciation, there is no vocal cord vibration when whispering. Therefore, a whispered speech does not contain a fundamental frequency, and its energy is about 20dB lower than that of its normal speech. Converting a whispered speech into a normal speech can improve speech quality and intelligibility. This demo shows the use of our attention-guided generative adversarial network for whisper to normal speech conversion, with which the mel-spectrogram of a converted normal speech is estimated at the frame level from the mel-spectrogram of its whispered speech, and the Griffin-Lim algorithm is then adopted to synthesize the converted normal speech mel-spectrogram into a time-domain waveform. The proposed AGAN-W2SC method avoids the difficulty of estimating the fundamental frequency of a normal speech from a whispered speech. This method can be adapted for practical applications because it does not require to align the associated speech parameters for training. Simulation results show that our GAN-W2SC method can obtain improved speech quality and speech intelligibility compared with those obtained by traditional methods based on dynamic time warping.</div>
+    <div><b>Summary:</b> Whispered speech is a special way of pronunciation without using vocal cord vibration. A whispered speech does not contain a fundamental frequency, and its energy is about 20dB lower than that of a normal speech. Converting a whispered speech into a normal speech can improve speech quality and intelligibility. In this paper, a novel attention-guided generative adversarial network model incorporating an autoencoder, a Siamese neural network, and an identity mapping loss function for whisper to normal speech conversion (AGAN-W2SC) is proposed. The proposed method avoids the challenge of estimating the fundamental frequency of the normal voiced speech converted from a whispered speech. Specifically, the proposed model is more amendable to practical applications because it does not need to align speech features for training. Experimental results demonstrate that the proposed AGAN-W2SC can obtain improved speech quality and speech intelligibility compared with traditional methods based on dynamic time warping.</div>
 
 
     <h4>Comparing of different models(Whisper, Normal, GMM, BLSTM, CycleGAN, Ours ): </h4>
